# simple_logger

./: CMakeLists.txt  Makefile  README.md
example/: basic_example.cc  crash_example.cc
src/: backtrace.h  logger.cc  logger.h
tests/: logger_test.cc  test_common.h
